# rlogger

./: .gitignore  README.md
sender/: go.mod  log_sender.go
sender/main/: main.go
server/: Cargo.toml
server/src/: main.rs
server/src/app_state/: app_state.rs
server/src/database/: storage.rs
server/src/database/scripts/: init.sql
server/src/error/: mod.rs
server/src/handlers/: logs.rs
server/src/log/: log.rs  mod.rs  repo.rs  service.rs
sidecar/: Cargo.toml
sidecar/src/: main.rs
sidecar/src/catcher/: catcher.rs  mod.rs
sidecar/src/error/: app_error.rs  auth.rs  default.rs
sidecar/src/log/: log.rs
sidecar/src/rlogger_server/: client.rs
