[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.120"
axum = "0.7.0"
chrono = "0.4.35"
tokio = { version = "1.22.0", features = ["full"] }
uuid = "1.7.0"
postgres = "0.19.7"
postgres-types = { version = "0.2.6", features = ["derive"] }
tokio-postgres = "0.7.10"
jsonwebtoken = "9.3.0"
axum-macros = "0.4.1"